<resources>
    <string name="app_name">TinkoffDepositionPoints</string>
    <string name="maps_title">Maps</string>
    <string name="list_title">List</string>
    <string name="play_failure">Sorry,\nGoogle Play services failure</string>
    <string name="desc_partner_avatar">Partner avatar</string>
    <string name="detail">Detail</string>
    <string name="partner_desc">Partner</string>
    <string name="work_hours">Work hours</string>
    <string name="full_address">Full address</string>
    <string name="point_not_found">Sorry,\ninformation about point %1$s not found</string>
    <string name="shared_avatar">shared_avatar</string>
    <string name="shared_title">shared_title</string>
    <string name="empty_points_list">Points not found</string>
    <string name="viewed">Просмотрено</string>
    <string name="point_id">Point Id</string>
    <string name="continue_without_location">Continue without location</string>
</resources>
