<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_map_partner_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:behavior_peekHeight="@dimen/bottom_sheet_height"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:behavior_peekHeight=""
    tools:showIn="@layout/fragment_maps">

    <LinearLayout
        android:layout_width="match_parent"
        android:minHeight="@dimen/bottom_sheet_height"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/frg_map_icon"
            android:layout_width="@dimen/partner_avatar_size"
            android:layout_height="@dimen/partner_avatar_size"
            android:background="@drawable/partner_stub"
            android:contentDescription="@string/desc_partner_avatar"
            android:transitionName="@string/shared_avatar"
            tools:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/frg_map_partner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:transitionName="@string/shared_title"
            tools:text="PartnerName" />

        <TextView
            android:id="@+id/frg_map_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="ExternalId" />

        <Button
            android:id="@+id/frg_map_open"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail" />

    </LinearLayout>

    <TextView
        android:id="@+id/frg_map_full_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="fullAddress" />

    <TextView
        android:id="@+id/frg_map_coord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="coordinates" />

</LinearLayout>

