<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tinkoff.turlir.com.points.point.PointActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/point_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/point_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:title="Point" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/point_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/point_avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/desc_partner_avatar"
        android:transitionName="@string/shared_avatar"
        app:layout_constraintEnd_toStartOf="@+id/point_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/point_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/point_app_bar" />

    <TextView
        android:id="@+id/point_ful_address_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/full_address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="@+id/point_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/point_avatar" />

    <TextView
        android:id="@+id/point_partner_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/partner_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="@+id/point_ful_address_hint"
        app:layout_constraintTop_toBottomOf="@+id/point_address" />

    <TextView
        android:id="@+id/point_work_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/work_hours"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="@+id/point_partner_hint"
        app:layout_constraintTop_toBottomOf="@+id/point_partner" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="point_work_hint,point_ful_address_hint,point_partner_hint" />

    <TextView
        android:id="@+id/point_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/point_ful_address_hint"
        app:layout_constraintEnd_toStartOf="@+id/point_right_guideline"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="TextView" />

    <TextView
        android:id="@+id/point_partner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/point_partner_hint"
        app:layout_constraintEnd_toStartOf="@+id/point_right_guideline"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="TextView" />

    <TextView
        android:id="@+id/point_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/point_work_hint"
        app:layout_constraintEnd_toStartOf="@+id/point_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        tools:text="TextView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/point_content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="point_ful_address_hint,point_partner,point_partner_hint,
        point_work_hint,point_address,point_hours,point_avatar" />

    <TextView
        android:id="@+id/point_empty_stub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/point_not_found"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/point_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/point_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/point_app_bar"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/point_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>